# MLOps2024

./: MLOps_key  MLOps_key.pub  README.md  calc.py  data.py  environment.yml  main.py  model.py  model_checkpoint.pth
MLOps2024/: Makefile  README.md  data.dvc  pyproject.toml  requirements.txt
MLOps2024/.dvc/: config
MLOps2024/CorruptedMNIST_Classification/: __init__.py  predict_model.py  train_model.py
MLOps2024/CorruptedMNIST_Classification/data/: make_dataset.py
MLOps2024/data/processed/: processed_targets.pt
MLOps2024/dockerfiles/: training.dockerfile
MLOps2024/docs/: mkdocs.yaml
MLOps2024/docs/source/: index.md
MLOps2024/models/model1/: model.py  model_checkpoint.pth
